@@ -1,3 +1,8 @@
+2010-02-23  Marc Ordinas i Llopis <marc.ordinasillopis@collabora.co.uk>
+
+	Task launcher editor layout changes.
+	For: NB#157292
+
 2010-02-22  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Release 2.2.133-1
